--- a/styles/style.scss
+++ b/styles/style.scss
@@ -384,10 +384,14 @@ section{
 .cat-food{
   flex-wrap: wrap-reverse;
 }
+.shopcontainer{
+  display: flex;
+  gap: 1.5rem;
 
+}
 .shop .box-container{
   @include grid(30rem);
-
+  flex: 1;
   .box{
     position: relative;
     overflow: hidden;
@@ -463,20 +467,21 @@ section{
     }
   }
 }
+
+
+
+
 .button-container{
   display: flex;
   justify-content: center;
   align-items: center;
  
-
-
-
-
 }
 
 .selectContainer {
   display: flex;
-  justify-content: space-between;
+  gap: 6rem;
+  flex-direction: column;
   margin-bottom: 1rem;
 }
 
@@ -492,6 +497,52 @@ section{
   width: 25%;
   padding: 1rem;
 }
+.categoryContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+  border: 1px solid black;
+}
+.categoryItem{
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.labelPrice{
+  font-size: medium;
+}
+
+.categoryItem h3 {
+  font-size: medium;
+  font-weight: normal;
+}
+
+.categoryItem img {
+  border-radius: 100%;
+}
+
+.nameFilterContainer{
+  display: flex;
+  gap: 1rem;
+  border: 1px solid black;
+  padding: 1rem;
+}
+
+.nameFilterContainer ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem
+}
+
+.nameFilterContainer li {
+  display: flex;
+  gap: 1rem;
+  font-size: medium
+}
+
 
 .services .box-container{
   @include grid(30rem);
@@ -710,6 +761,13 @@ section{
   h3 {
     margin-top: 3rem;
     font-size: 1.8rem;
+  }
+
+  .close{
+    font-size: xx-large;
+    background-color: #000;
+    color: #fff;
+    width: 15%;
   }
 }
 
