--- a/styles/style.scss
+++ b/styles/style.scss
@@ -387,17 +387,17 @@ section{
 .shopcontainer{
   display: flex;
   gap: 1.5rem;
-
 }
 .shop .box-container{
   @include grid(30rem);
   flex: 1;
   .box{
+    width: 300px;
     position: relative;
     overflow: hidden;
     height: 560px;
     border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -483,6 +483,10 @@ section{
   gap: 6rem;
   flex-direction: column;
   margin-bottom: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+  padding: 1.5rem;
+  height: min-content;
 }
 
 .selectContainer button {
@@ -502,16 +506,33 @@ section{
   flex-direction: column;
   gap: 1rem;
   margin-top: 1rem;
-  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
+
+  h2{
+    color: #fff;
+    font-size: medium;
+    border-radius: 8px;
+  }
+
 }
 .categoryItem{
   display: flex;
   gap: 1rem;
   padding: 1rem;
+  
+}
+.filterHeading{
+  font-size: large;
 }
 
 .labelPrice{
   font-size: medium;
+  color: #000;
+}
+.priceBackground{
+  background-color: rgb(239 239 239 / 54%);
+  text-align: center;
 }
 
 .categoryItem h3 {
@@ -525,8 +546,7 @@ section{
 
 .nameFilterContainer{
   display: flex;
-  gap: 1rem;
-  border: 1px solid black;
+  gap: 1rem;  
   padding: 1rem;
 }
 
@@ -968,6 +988,10 @@ section{
     }
   }
 
+  .shopcontainer{
+    flex-direction: column;
+  }
+
 }
 
 @media (max-width:450px){
@@ -980,4 +1004,99 @@ section{
     width:90%;
   }
 
+  .shopcontainer{
+    flex-direction: column;
+  }
+
+}
+
+
+.noResult{
+  text-align: center;
+  font-size: 3rem;
+}
+
+
+$midnight: #e67e22;
+$clouds: #ecf0f1;
+
+.row {
+  display:flex;
+  width: 100%;
+  .col {
+    flex:1;
+    &:last-child {
+      margin-left: 1em;
+    }
+  }
+}
+/* Accordion styles */
+.tabs {
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 4px -2px rgba(0,0,0,0.5);
+
+
+  input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+.tab {
+  width: 100%;
+  font-size: medium;
+  color: white;
+  overflow: hidden;
+  &-label {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+    background: $midnight;
+    font-weight: bold;
+    cursor: pointer;
+    /* Icon */
+    &:hover {
+      background: darken($midnight, 10%);
+    }
+    &::after {
+      content: "\276F";
+      width: 1em;
+      height: 1em;
+      text-align: center;
+      transition: all .35s;
+    }
+  }
+  &-content {
+    max-height: 0;
+    padding: 0 1em;
+    color: black;
+    background: white;
+    transition: all .35s;
+  }
+  &-close {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1em;
+    font-size: 0.75em;
+    background: $midnight;
+    cursor: pointer;
+    &:hover {
+      background: darken($midnight, 10%);
+    }
+  }
+}
+
+// :checked
+input:checked {
+  + .tab-label {
+    background: darken($midnight, 10%);
+    &::after {
+      transform: rotate(90deg);
+    }
+  }
+  ~ .tab-content {
+    max-height: 100vh;
+    padding: 1em;
+  }
 }
