cambios promo img

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -395,7 +395,7 @@ section{
     width: 100%;
     position: relative;
     overflow: hidden;
-    height: 560px;
+    height: 400px;
     border-radius: 5px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     display: flex;
@@ -414,12 +414,18 @@ section{
     }
 
     .imageOferta {
-      height:90%;
-      width:90%;
       overflow: hidden;
       object-fit: cover;
       margin: 0px auto;
+     
+
+      img{
+        width: 100%;
+        height: 100%;
+      }
     }
+
+    
 
     .image{
       height:32rem;
@@ -1135,6 +1141,8 @@ input:checked {
   ~ .tab-content {
     max-height: 100vh;
     padding: 1em;
+
+    
   }
 }
 
