--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
 * {
   font-family: "Poppins", sans-serif;
@@ -29,7 +30,6 @@ $box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
 @mixin form-btn {
   width: 100%;
   text-align: center;
-
   &:hover {
     background: $black;
   }
@@ -155,7 +155,7 @@ section {
   }
 
   .navbar a {
-    margin: 0 1rem;
+    margin: 0.5rem;
     font-size: 1.7rem;
     color: $light-color;
 
@@ -267,14 +267,21 @@ section {
       font-size: 6rem;
       color: $white;
       padding-bottom: 1rem;
-
-      span {
-        color: $carrot-color;
-      }
     }
 
-    .btn {
-      @include white-btn();
+    .btn-home {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.8rem 2.8rem;
+      border-radius: 5rem;
+      border-top-left-radius: 0;
+      border: 0.2rem solid white;
+      background: none;
+      color: white;
+      font-size: 1.7rem;
+      overflow: hidden;
+      z-index: 0;
+      position: relative;
     }
   }
 
@@ -373,8 +380,8 @@ section {
       padding: 0.5rem 0;
     }
 
-    a {products
-      img {
+    a {
+      products img {
         height: 15rem;
         margin-top: 1rem;
       }
@@ -392,7 +399,7 @@ section {
 .shopContainer {
   display: flex;
   border-radius: 1rem;
-  gap: 5rem
+  gap: 5rem;
 }
 .shop .products {
   @include grid(30rem);
@@ -403,7 +410,7 @@ section {
     overflow: hidden;
     height: 560px;
     border-radius: 5px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -416,20 +423,17 @@ section {
     }
 
     .imageOferta {
-      height:90%;
-      width:90%;
+      height: 90%;
+      width: 90%;
       overflow: hidden;
       object-fit: cover;
       margin: 0px auto;
-     
 
-      img{
+      img {
         width: 100%;
         height: 100%;
       }
     }
-
-    
 
     .image {
       height: 32rem;
@@ -626,7 +630,6 @@ section {
   }
 }
 
-
 .plan .products {
   @include grid(30rem);
 
@@ -776,8 +779,21 @@ section {
     padding: 2rem 1rem;
     margin-top: 2.5rem;
 
+    @keyframes colorChange {
+      0% {
+        color: $black;
+      }
+      100% {
+        color: $carrot-color;
+      }
+    }
+
     span {
+      font-family: "Indie Flower", cursive;
+      font-weight: bold;
       color: $carrot-color;
+      animation: colorChange 4s linear infinite alternate;
+      flex: 1;
     }
   }
 }
@@ -970,6 +986,10 @@ section {
     }
   }
 }
+.hero-logo {
+  width: 250px;
+  filter: drop-shadow(0px 0px 16px white);
+}
 
 @media (max-width: 768px) {
   #menu-btn {
@@ -991,7 +1011,7 @@ section {
 
       a {
         display: block;
-        margin: 2rem;
+        margin: 0.5rem;
         font-size: 2rem;
       }
     }
@@ -1099,15 +1119,12 @@ input:checked {
   ~ .tab-content {
     max-height: 100vh;
     padding: 1em;
-
-    
   }
-  
 }
-.ul{
+.ul {
   list-style: none;
 }
-.input{
+.input {
   margin-right: 10px;
 }
 .pagination {
@@ -1121,7 +1138,7 @@ input:checked {
   list-style: none;
   margin-right: 1rem;
   border: 1px solid #c7c7c7;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 0 1rem;
 }
 
