--- a/styles/style.scss
+++ b/styles/style.scss
@@ -652,6 +652,7 @@ section {
       background-color: #f7931e;
       border-radius: 7px;
       padding: 0.5rem;
+      cursor: pointer;
     }
   }
 }
