--- a/styles/style.scss
+++ b/styles/style.scss
@@ -286,6 +286,7 @@ section {
   @media (max-width: 500px) {
     margin-top: 4rem;
     background: url(../public/image/BIENVENIDA-MOVIL.png) no-repeat;
+    background-size: cover;
 
     .btn-home {
       margin-right: 0px;
