--- a/styles/style.scss
+++ b/styles/style.scss
@@ -638,6 +638,17 @@ section {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  align-items: center;
+  overflow: hidden;
+  height: 90%;
+  margin: 10px 0;
+
+  @media (max-width: 475px) {
+    .modal-content {
+      height: 60%;
+      margin: 80px 0;
+    }
+  }
 
   .buttonContainer {
     width: 100%;
