--- a/styles/style.scss
+++ b/styles/style.scss
@@ -258,12 +258,18 @@ html {
   background: url(../public/image/banner-bienvenida-pc.png) no-repeat;
   background-position: center;
   position: relative;
+  margin-bottom: 4rem;
+
+  .content {
+    display: flex;
+    justify-content: end;
+  }
 
   .btn-home {
     display: inline-block;
     width: 330px;
     margin-top: 11rem;
-    margin-right: 15px;
+    margin-right: 15rem;
     padding: 1rem 2rem;
     border-radius: 2rem;
     border-top-left-radius: 0;
@@ -401,7 +407,8 @@ html {
 .shopContainer {
   display: flex;
   border-radius: 1rem;
-  gap: 5rem;
+  gap: 2rem;
+  padding: 1rem;
 }
 .shop .products {
   @include grid(30rem);
@@ -461,7 +468,7 @@ html {
       padding: 1rem 0;
     }
     .content {
-      padding: 1rem 2rem;
+      padding: 1rem 1rem;
       text-align: center;
 
       h4 {
