--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,7 +13,7 @@
   transition: 0.2s linear;
 }
 
-$carrot-color: #f7931e;
+$carrot-color: black;
 $black: #652e9f;
 $white: #fff;
 $light-color: #666;
